# telegram-bot-sample

./: .gitignore  LICENSE  README.md  alembic.ini  app.py  pyproject.toml  run.py
alembic/: env.py
commands/: status.py
core/: client.py  config.py  loader.py  logger.py  waiter.py
core/database/: base.py  session.py
core/implementations/: button.py  command.py  message.py  schedule.py
services/: emojis.py  http.py
